--- a/src/Makefile
+++ b/src/Makefile
@@ -33,13 +33,13 @@ ifneq ("$(wildcard /usr/bin/g++-4.9)","")
   CC := "/usr/bin/gcc-4.9"a
   CXX := "/usr/bin/g++-4.9"
   CFLAGS+=-std=c++11 -DCPP11
-  SRCS+= LogicalStoreToInstances.cpp PhysicalStoreToInstances.cpp
+  SRCS+= LogicalStoreToInstances.cpp PhysicalStoreToInstances.cpp LogicalCreateWithResidency.cpp PhysicalCreateWithResidency.cpp
 else
   ifneq ("$(wildcard /opt/rh/devtoolset-3/root/usr/bin/gcc)","")
    CC := "/opt/rh/devtoolset-3/root/usr/bin/gcc"
    CXX := "/opt/rh/devtoolset-3/root/usr/bin/g++"
    CFLAGS+=-std=c++11 -DCPP11
-   SRCS+= LogicalStoreToInstances.cpp PhysicalStoreToInstances.cpp
+   SRCS+= LogicalStoreToInstances.cpp PhysicalStoreToInstances.cpp LogicalCreateWithResidency.cpp PhysicalCreateWithResidency.cpp
   endif
 endif
 
